--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
             <h5>09.03.2018: LATE REGISTRATION OPENS</h5>
             <h5>31.05.2018: LATE REGISTRATION ENDS</h5>
             <h5>STUDENT FEE (EARLY/REGULAR/LATE): 450PLN/100EUR</h5>
-            <h5>NORMALFEE (EARLY/REGULAR/LATE): 650PLN/150EUR</h5>
+            <h5>NORMAL FEE (EARLY/REGULAR/LATE): 650PLN/150EUR</h5>
           </header>
-          <p>The registration fee includes participation in workshops and Special Interest Groups. Continuous coffee breaks and lunches on the 3rd and 4th of July are covered by the fee. Refunds are possible till 31.07.2019.</p>
+          <p>The registration fee includes participation in Special Interest Groups. Continuous coffee breaks and lunches are covered by the fee. Refunds are possible till 31.07.2019.</p>
         </div>
         <div class="wrapper">
           <header class="">
