--- a/index.html
+++ b/index.html
@@ -103,23 +103,23 @@
         <div class="wrapper">
           <header class="">
             <h3>Registrations</h3>
-            <h5>09.03.2018: EARLY BIRD REGISTRATION OPENS</h5>
-            <h5>31.05.2018: EARLY BIRD REGISTRATION ENDS</h5>
-            <h5>09.03.2018: REGULAR REGISTRATION OPENS</h5>
-            <h5>31.05.2018: REGULAR REGISTRATION ENDS</h5>
-            <h5>09.03.2018: LATE REGISTRATION OPENS</h5>
-            <h5>31.05.2018: LATE REGISTRATION ENDS</h5>
-            <h5>STUDENT FEE (EARLY/REGULAR/LATE): 450PLN/100EUR</h5>
-            <h5>NORMAL FEE (EARLY/REGULAR/LATE): 650PLN/150EUR</h5>
+            <h5>09.03.2019: EARLY BIRD REGISTRATION OPENS</h5>
+            <h5>31.05.2019: EARLY BIRD REGISTRATION ENDS</h5>
+            <h5>01.06.2019: REGULAR REGISTRATION OPENS</h5>
+            <h5>31.08.2019: REGULAR REGISTRATION ENDS</h5>
+            <h5>01.09.2019: LATE REGISTRATION OPENS</h5>
+            <h5>22.09.2019: LATE REGISTRATION ENDS</h5>
+            <h5>CONFERENCE STUDENT FEE (EARLY/REGULAR/LATE): 200 PLN (50 EUR)/260 PLN (65 EUR)</h5>
+            <h5>CONFERENCE NORMAL FEE (EARLY/REGULAR/LATE): 390 PLN/520P PLN/780 PLN</h5>
           </header>
           <p>The registration fee includes participation in Special Interest Groups. Continuous coffee breaks and lunches are covered by the fee. Refunds are possible till 31.07.2019.</p>
         </div>
         <div class="wrapper">
           <header class="">
             <h3>CALLS:</h3>
-            <h5>04.04.2018: ALL CALLS OPEN</h5>
-            <h5>31.05.2018: WORKSHOP CALL CLOSES</h5>
-            <h5>28.06.2018: PRESENTATION CALLS CLOSES</h5>
+            <h5>04.04.2019: ALL CALLS OPEN</h5>
+            <h5>31.05.2019: WORKSHOP CALL CLOSES</h5>
+            <h5>28.06.2019: PRESENTATION CALLS CLOSES</h5>
           </header>
           <p>Abstract submissions are format free, but please do not exceed 400 words and state clearly a chosen call. <b>The abstract submission form <a href="http://whyr.pl/2019/submit/">is available here</a>.</b></p>
         </div>
@@ -321,7 +321,7 @@
           }
         </script>-->
       </header>
-      <div class="row">
+      <!-- <div class="row">
         <div class="col-4"><i class="fa fa-laptop" aria-hidden="true"></i>
           <h5>Workshops</h5>
           <left>2nd of July: R workshops. Additional mlr workshops are on July the 3rd. <a href="https://whyr2018.github.io/workshops/">The list of workshops is already available.</a></left>
@@ -349,7 +349,7 @@
           <left>July the 5th: meet R users with similar interests and share with them your experience. Topics: Diversity in data science, Career growth with R and Teaching data analysis.</left>
         </div>
       </div>
-    </div>
+    </div>-->
   </section>
   <!-- Sekcja ozdobniczo/przerwynikowa ze zdjęciem miejsca konferencji -->
   <section id="Pre-meetings">
@@ -372,7 +372,7 @@
     <div class="slider-item">
       <img src="img/meetings/berlin_car.jpg"> </div>
   </div> -->
-  <header>
+  <!-- <header>
     <h3>Venue</h3>
   </header>
   <section id="place" class="place">
@@ -389,8 +389,8 @@
           The airport is only a 30-minute drive away.</p>
       </header>
     </div>
-  </section>
-  <div class="wrapper"> </div>
+  </section>-->
+  <!-- <div class="wrapper"> </div>
   <section id="hackaton" class="about post">
     <div class="wrapper">
       <header>
@@ -400,27 +400,26 @@
             <p>The WhyR 2018
               <a href="https://mlr-org.github.io/">hackathon </a>is a unique event during which you can contribute to the development of the mlr R package under the guidance of its authors. The participation in the hackathon is free for registered attendees of WhyR 2018, but to ensure the
               best experience there would be a separate registration for this event. The exact details will be available in May.</p>
-            <header>
+            <header>-->
               <h3>Special Interest Groups</h3>
             </header>
             <div class="wrapper">
               <header class="">
                 
-                <p style="color:#black">On the 5th of July we organize meetings of Special Interest Groups, where participants of WhyR 2018 can discuss their experiences in three specific areas:</p>
+                <p style="color:#black">On the 27th of September we organize meetings of Special Interest Groups, where participants of WhyR 2018 can discuss their experiences in three specific areas:</p>
                 <div class="row">
                   <div class="col-4"><i aria-hidden="true"></i>
                     <h5>Diversity in Data Science</h5>
-                    <p style="color:black">This board aims to inspire members of affinity groups to pursue careers in data science. We hope that this platform for networking and exchange of experiences will help in boosting diversity of R community. This meeting is moderated
-                      by R-Ladies Warsaw. </p>
+                    <p style="color:black">This board aims to inspire members of affinity groups to pursue careers in data science. We hope that this platform for networking and exchange of experiences will help in boosting diversity of R community.  </p>
                   </div>
                   <div class="col-4">
                     <h5>Career-planning in Data Science</h5>
-                    <p style="color:black">During this meeting, participants of WhyR will have a chance to learn from more experienced R enthusiasts about their career paths. This meeting will be moderated by Artur Suchwałko (QuantUp).</p>
+                    <p style="color:black">During this meeting, participants of WhyR will have a chance to learn from more experienced R enthusiasts about their career paths.</p>
                   </div>
                   <div class="col-4">
                     <h5>Teaching Data Science</h5>
                     <p style="color:black">Data science, as every emerging field, requires constantly evolving set of skills. In any setting, both corporate and academic, teaching data analysis remains a challenge. During this meeting data science practitioners will share their
-                      experiences in introducing their students to basic and advanced concepts of data science. This meeting will be moderated by Stefan Rödiger (Brandenburg Technical University Cottbus-Senftenberg).</p>
+                      experiences in introducing their students to basic and advanced concepts of data science. </p>
                   </div>
                 </div>
               </header>
