--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Why R? 2019: an international conference about R applications, ranging from pure science to business">
   <meta name="keywords" content="Conference Why R, machine learning, mathematics, R, coding, data analysis, data science, R users groups">
-  <meta name="author" content="Marcin Kosiński & Michał Burdukiewicz">
+  <meta name="author" content="Michał Burdukiewicz" >
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat|Roboto" rel="stylesheet">
   <link rel="stylesheet" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
@@ -501,11 +501,14 @@
                     </a><div class="sponsors"><a href="https://idash.pl/">
                       </a><a href="https://www.r-consortium.org/">
                       <img src="img/sponsors/r_conso_1.jpg" alt="R Consorcium">
-                      </a><center><a href="https://www.r-consortium.org/">
+                      </a><center><a href="https://www.r-consortium.org/"> </a>
+                      </div>
+                      </div>
+                      </section>
                 <!-- Sekcja poświęcona organizatorom -->
-                </a><section id="organizators" class="organizators post"><a href="https://www.jumpingrivers.com/">
-                  </a><div class="wrapper"><a href="https://www.jumpingrivers.com/">
-                    </a><header>
+               <section id="organizators" class="organizators post">
+                  <div class="wrapper">
+                    <header>
                       <header>
                         <h4>Organising</h4>
                         <h3>Organising Committee</h3>
@@ -536,8 +539,7 @@
                   </div>
                 <h3>Scientific Committee</h3>
                  
-                      <div class="galeria"><a href="https://www.jumpingrivers.com/">
-                        </a>
+                      <div class="galeria">
                 <div class="photo_container">
                           <figure class="photo">
                             <img src="img/people/adolfo-crop.gif" alt="Adolpho Alvarez"> </figure>
