added steph and jakub

--- a/index.html
+++ b/index.html
@@ -136,22 +136,24 @@
       </header>
       <div class="row">
         <div class="col-6 speaker">
-          <img src="img/guests/Bischl_kolko.gif">
+          <img src="img/guests/steph_crop.gif">
           <div class="who">
-            <h5 style="color:#FFFFFF">Bernd Bischl</h5>
+            <h5 style="color:#FFFFFF">Steph Locke</h5>
             <p class="job" style="color:#FFFFFF">
-              <a href="https://www.researchgate.net/profile/Bernd_Bischl" target="_blank"><i class="fa fa-globe" aria-hidden="true"></i></a>
-              <a href="https://github.com/berndbischl" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a> Ludwig-Maximilians-University of Munich</p>
-            <p style="color:#FFFFFF">A professor for Computational Statistics at the Department of Statistics at the LMU Munich.</p>
+              <a href="https://www.linkedin.com/in/stephanielocke/"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a> 
+              <a href="https://github.com/stephlocke" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a> 
+              Principal Consultant (GBR) | Locke Data</p>
+            <p style="color:#FFFFFF">satRdays global leader.</p>
           </div>
         </div>
         <div class="col-6 speaker">
-          <img src="img/guests/Niedzielski_kolko.gif">
+          <img src="img/guests/jakub_crop.gif">
           <div class="who">
-            <h5 style="color:#FFFFFF">Tomasz Niedzielski</h5>
+            <h5 style="color:#FFFFFF">Jakub Nowosad</h5>
             <p class="job" style="color:#FFFFFF">
-              <a href="http://www.geogr.uni.wroc.pl/kontakty/kontakt-53,tomasz-niedzielski" target="_blank"><i class="fa fa-globe" aria-hidden="true"></i></a> University of Wroclaw</p>
-            <p style="color:#FFFFFF">HydroProg | Head of the Department of Geoinformatics and Cartography at the University of Wroclaw.</p>
+              <a href="https://www.researchgate.net/profile/Jakub_Nowosad2" target="_blank"><i class="fa fa-globe" aria-hidden="true"></i></a>
+              University of Poznan</p>
+            <p style="color:#FFFFFF">XXX.</p>
           </div>
         </div>
       </div>
@@ -172,7 +174,6 @@
             <h5 style="color:#FFFFFF">Maciej Eder</h5>
             <p class="job" style="color:#FFFFFF">
               <a href="https://www.researchgate.net/profile/Maciej_Eder" target="_blank"><i class="fa fa-globe" aria-hidden="true"></i></a>
-              <a href="https://www.linkedin.com/in/maciej-eder-4919a033/"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a> Pedagogical University of Cracow</p>
             <p style="color:#FFFFFF">Head of Polish Language Institute, Polish Academy of Sciences (PAN).</p>
           </div>
         </div>
