--- a/index.html
+++ b/index.html
@@ -101,19 +101,31 @@
             <a href="mailto:kontakt@whyr.pl">us</a>!</h5>
         </header>
         <header></header>
+        <header>
         <div class="wrapper">
-          <header class="">
-            <h3>Registrations</h3>
-            <h5>09.03.2019: EARLY BIRD REGISTRATION OPENS</h5>
-            <h5>31.05.2019: EARLY BIRD REGISTRATION ENDS</h5>
-            <h5>01.06.2019: REGULAR REGISTRATION OPENS</h5>
-            <h5>31.08.2019: REGULAR REGISTRATION ENDS</h5>
-            <h5>01.09.2019: LATE REGISTRATION OPENS</h5>
-            <h5>22.09.2019: LATE REGISTRATION ENDS</h5>
-            <h5>CONFERENCE STUDENT FEE (EARLY/REGULAR/LATE): 200 PLN (50 EUR)/260 PLN (65 EUR)</h5>
-            <h5>CONFERENCE NORMAL FEE (EARLY/REGULAR/LATE): 390 PLN/520P PLN/780 PLN</h5>
+          <header>
+            <h4>Programme</h4>
           </header>
-          <p>The registration fee includes participation in Special Interest Groups. Continuous coffee breaks and lunches are covered by the fee. Refunds are possible till 31.07.2019.</p>
+        </div>
+       
+        <img src="img/bg/programme.jpg" style="width:100%">
+        
+        <div class="wrapper">
+          <div class="row">
+            <div class="column">
+              <header>
+                <h3>FEE TYPE</h3>
+              </header>   
+                <p>REGULAR (ONLY CONFERENCE)</p>
+                <p>STUDENT (ONLY CONFERENCE)</p>  
+                <p>REGULAR (CONFERENCE AND WORKSHOPS)</p>
+                <p>STUDENT (CONFERENCE AND WORKSHOPS)</p>    
+            </div>
+            <div class="column"> 
+            </div>
+            <div class="column"></div>
+            <div class="column"></div>
+          </div>
         </div>
         <div class="wrapper">
           <header class="">
@@ -123,7 +135,7 @@
             <h5>28.06.2019: PRESENTATION CALLS CLOSES</h5>
           </header>
           <p>Abstract submissions are format free, but please do not exceed 400 words and state clearly a chosen call. <b>The abstract submission form <a href="http://whyr.pl/2019/submit/">is available here</a>.</b></p>
-        </div>
+        <c
       </header><b>
     </b></div><b>
   </b></section><b>
