--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Why R 2018 Conference</title>
+  <title>Why R? 2019 Conference</title>
   <meta charset="utf-8">
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -51,12 +51,12 @@
             <li>
               <a href="#Pre-meetings" class="link">Pre-meetings</a>
             </li>
-            <li>
+            <!--<li>
               <a href="#place" class="link">Venue</a>
             </li>
             <li>
               <a href="#hackaton" class="link">Hackaton</a>
-            </li>
+            </li>-->
             <li>
               <a href="#sponsoring" class="link">Sponsors</a>
             </li>
@@ -226,7 +226,7 @@
               <a href="https://www.linkedin.com/in/stephanielocke/"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a> 
               <a href="https://github.com/stephlocke" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a> 
               Principal Consultant (GBR) | Locke Data</p>
-            <p style="color:#FFFFFF">satRdays global leader.</p>
+            <p style="color:#FFFFFF">Invited keynote speaker.</p>
           </div>
         </div>
         <div class="col-6 speaker">
@@ -236,39 +236,7 @@
             <p class="job" style="color:#FFFFFF">
               <a href="https://www.researchgate.net/profile/Jakub_Nowosad2" target="_blank"><i class="fa fa-globe" aria-hidden="true"></i></a>
               University of Poznan</p>
-            <p style="color:#FFFFFF">XXX.</p>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-6 speaker">
-          <img src="img/guests/Petzoldt_kolko.gif">
-          <div class="who">
-            <h5 style="color:#FFFFFF">Thomas Petzoldt</h5>
-            <p class="job" style="color:#FFFFFF">
-              <a href="https://www.researchgate.net/profile/Thomas_Petzoldt" target="_blank"><i class="fa fa-globe" aria-hidden="true"></i></a>
-              <a href="https://github.com/tpetzoldt" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a> Dresden University of Technology</p>
-            <p style="color:#FFFFFF">Simulation of dynamic models in R | Senior Scientist, Faculty of Environmental Sciences.</p>
-          </div>
-        </div>
-        <div class="col-6 speaker">
-          <img src="img/guests/meder-crop.gif">
-          <div class="who">
-            <h5 style="color:#FFFFFF">Maciej Eder</h5>
-            <p class="job" style="color:#FFFFFF">
-              <a href="https://www.researchgate.net/profile/Maciej_Eder" target="_blank"><i class="fa fa-globe" aria-hidden="true"></i></a>
-            <p style="color:#FFFFFF">Head of Polish Language Institute, Polish Academy of Sciences (PAN).</p>
-          </div>
-        </div>
-        <div class="col-6 speaker">
-          <img src="img/guests/leon_kolko.gif">
-          <div class="who">
-            <h5 style="color:#FFFFFF">Leon Eyrich Jessen</h5>
-            <p class="job" style="color:#FFFFFF">
-              <a href="https://www.researchgate.net/profile/Leon_Jessen" target="_blank"><i class="fa fa-globe" aria-hidden="true"></i></a>
-              <a href="https://github.com/leonjessen" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
-              <a href="https://dk.linkedin.com/in/leonjessen"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a> Technical University of Denmark</p>
-            <p style="color:#FFFFFF">Immunoinformatics and Machine Learning, DTU Bioinformatics Employees.</p>
+            <p style="color:#FFFFFF">Invited keynote speaker.</p>
           </div>
         </div>
       </div>
