--- a/index.html
+++ b/index.html
@@ -551,10 +551,16 @@
                         <h5>BRONZE SPONSORS</h5>
                       </header>
                     </center>
-                    </a><div class="sponsors"><a href="https://idash.pl/">
-                      </a><a href="https://www.r-consortium.org/">
+                    </a><div class="sponsors">
+                      <a href="https://www.r-consortium.org/">
                       <img src="img/sponsors/r_conso_1.jpg" alt="R Consorcium">
                       </a><center><a href="https://www.r-consortium.org/"> </a>
+		
+		      <a href="https://www.rstudio.com/">
+		      <img src="img/sponsors/logo_rstudio.png" alt="rstudio">
+                      </a><center><a href="https://www.rstudio.com/"> </a>
+         
+			
                       </div>
                       </div>
                       </section>
@@ -572,7 +578,7 @@
                             <img src="img/people/marcin-crop.gif" alt="Marcin Kosiński"> </figure>
                           <div class="description">
                             <p>Marcin Kosiński</p>
-                            <p id="lider">e tam , takie napinanie jest zbedne. wiadomo ze jestem najwazniejszy</p>
+                            <p id="lider"></p>
                             <a href="https://www.linkedin.com/in/marcin-kosiński-81435aab" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
                             <a href="http://r-addict.com/" target="_blank"><i class="fa fa-globe" aria-hidden="true"></i></a>
                             <a href="https://github.com/MarcinKosinski/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
