Add P Wojcik photo

--- a/index.html
+++ b/index.html
@@ -596,7 +596,9 @@
                       </div>
                     </header>
                   </div>
-                <h3>Scientific Committee</h3>
+		       <header>
+                	<h3>Scientific Committee</h3>
+		       </header>
                  
                       <div class="galeria">
                 <div class="photo_container">
@@ -619,7 +621,7 @@
                         </div>
                 <div class="photo_container">
                           <figure class="photo">
-                            <img src="img/people/nopicture.gif" alt="Piotr Wójcik"> </figure>
+                            <img src="img/guests/Piotr_crop.gif" alt="Piotr Wójcik"> </figure>
                           <div class="description">
                             <p>Piotr Wójcik</p>
                             <a href="https://www.linkedin.com/in/pwojcik/" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
