--- a/index.html
+++ b/index.html
@@ -636,11 +636,12 @@
                 <section id="org" class="pre-meetings post">
                   <div class="wrapper">
                     <header>
-                      <h4>Whyr R? Foundation</h4>
+                      <h4>Whyr R? Foundation & PLinML Society</h4>
                     </header>
                   </div>
                   <a href="http://whyr.pl">
-                   </a><center><a href="http://whyr.pl"> <img src="img/log_eng_nastrone.jpg" alt="PWC" style="width:70%"> </a></center>
+                   </a><center><a href="http://whyr.pl"> <img src="img/log_eng_nastrone.jpg" alt="Foundation" style="width:70%"> </a></center>
+		   </a><center><a href="http://plinml.org"><img src="img/logos/plinml.png" alt="Stowarzyszenie" style="width:70%"> </a></center>
                 </section>
                 <!-- Partnerzy społecznościowi || poniżej wstaw link do stron partnerów, przyszykowałem już znaczniki <a> z pustym href=""-->
                 <section class="partners-postR">
