--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
       <div class="main-menu">
         <div class="mobile-toggle"> <span></span> <span></span> <span></span> </div>
         <nav>
-          <!-- <div class="whyr-blog">
-            <a href="http://whyr.pl/blog/">Blog
+          <div class="whyr-blog">
+            <a href="http://whyr.pl/foundation/#blog">Blog
               <img src="img/icons/whyrnieb-white.png"> </a>
-          </div> -->
+          </div>
           <ul class="">
             <li>
               <a href="#about" class="link">About</a>
@@ -63,6 +63,9 @@
             <li>
               <a href="#organizators" class="link">Organising committee</a>
             </li>
+            <li>
+              <a href="http://whyr.pl/2019/coc/" class="link">Code of conduct</a>
+            </li>  
           </ul>
         </nav>
       </div>
@@ -641,7 +644,7 @@
                   </div>
                   <a href="http://whyr.pl">
                    </a><center><a href="http://whyr.pl"> <img src="img/log_eng_nastrone.jpg" alt="Foundation" style="width:70%"> </a></center>
-		   </a><center><a href="http://plinml.org"><img src="img/logos/plinml.png" alt="Stowarzyszenie" style="width:70%"> </a></center>
+		   </a><center><a href="http://plinml.org"><img src="img/logos/plinml.png" alt="Stowarzyszenie" style="width:30%"> </a></center>
                 </section>
                 <!-- Partnerzy społecznościowi || poniżej wstaw link do stron partnerów, przyszykowałem już znaczniki <a> z pustym href=""-->
                 <section class="partners-postR">
