--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
         <h3>Why R? Pre-meetings</h3>
       </header>
     </div>
-    <img src="img/bg/premeetings.jpg" alt="PWC" style="width:100%"> </section>
+    <img src="img/bg/europa_whyr2019_06_05.jpg" alt="pre-meetings" style="width:100%"> </section>
   <!-- <div class="owl-carousel owl-theme">
     <div class="slider-item">
       <img src="img/meetings/copen_car.jpg"> </div>
@@ -545,7 +545,7 @@
                         <h5>SILVER SPONSORS</h5>
                       </header>
                     </center>
-                    </a><div class="sponsors"><a href="https://pl.kruk.eu/klienci">
+                    </a><div class="sponsors">
                       </a><a href="https://idash.pl/">
                       <img src="img/sponsors/logo_dst.png" alt="iDash">
                     </a></div><a href="https://idash.pl/">
