--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
               <a href="#programme" class="link">Programme</a>
             </li>
             <li>
+              <a href="#workshop" class="link">Workshops</a>
+            </li>
+            <li>
               <a href="#Pre-meetings" class="link">Pre-meetings</a>
             </li>
             <!--<li>
@@ -57,6 +60,7 @@
             <li>
               <a href="#hackaton" class="link">Hackaton</a>
             </li>-->
+
             <li>
               <a href="#sponsoring" class="link">Sponsors</a>
             </li>
@@ -244,6 +248,28 @@
             <p class="job" style="color:#FFFFFF">
               <a href="https://www.researchgate.net/profile/Jakub_Nowosad2" target="_blank"><i class="fa fa-globe" aria-hidden="true"></i></a>
               University of Poznan</p>
+            <p style="color:#FFFFFF">Invited keynote speaker.</p>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-6 speaker">
+          <img src="img/workshops/marvin_crop.gif">
+          <div class="who">
+            <h5 style="color:#FFFFFF">Marvin Wright</h5>
+            <p class="job" style="color:#FFFFFF">
+              <a href="https://www.researchgate.net/profile/Marvin_Wright2" target="_blank"><i class="fa fa-globe" aria-hidden="true"></i></a>
+              Leibniz Institute for Prevention Research and Epidemiology</p>
+            <p style="color:#FFFFFF">Invited keynote speaker.</p>
+          </div>
+        </div>
+        <div class="col-6 speaker">
+          <img src="img/workshops/sigrid_crop.gif">
+          <div class="who">
+            <h5 style="color:#FFFFFF">Sigrid Keydana</h5>
+            <p class="job" style="color:#FFFFFF">
+              <a href="https://www.linkedin.com/in/sigrid-keydana-9a16b410/" target="_blank"><i class="fa fa-globe" aria-hidden="true"></i></a>
+              Applied Researcher at RStudio</p>
             <p style="color:#FFFFFF">Invited keynote speaker.</p>
           </div>
         </div>
@@ -484,17 +510,49 @@
                   </div>
                 </div>
               </header>
-              <!-- <section id="workshop" class="workshop postL">
+    <section id="workshop" class="workshop postL">
     <div class="wrapper">
       <header>
         <h4>Workshops</h4>
-        <h3>Workshops</h3>
-        <p>Każdy warsztat trwa 3 godziny. Podczas każdego warsztatu przewidziana jest przerwa (30 minut).</p>
-        <p>Warsztaty podzielone są wierszami na sesje tematyczne. Pełny spis materiałów dostępny jest
-          <a href="https://github.com/whyR-conference/warsztaty">tutaj</a>.</p>
+        <h3>More to come!</h3>
+        
       </header>
+      <div class="row works-head">
+					<div class="col-6"><h3></h3></div>
+					<div class="col-6"><h3></h3></div>
+				</div>
+				<div class="row">
+					<div class="col-6">
+						<div class="work-content">
+							<img src="img/workshops/idash-crop.gif" alt="iDash">
+							<h4>Straightforward introduction to Deep Learning in R (with Keras)</h4>
+							<p> Mikołaj Bogucki <a href="https://idash.pl/">iDash </a></p>
+						</div>
+					</div>
+					<div class="col-6">
+						<div class="work-content">
+							<img src="img/workshops/matteo-crop.gif" alt="matteo">
+							<h4>Introduction to modern Generalized Additive Models in R (with mgcv)</h4>
+							<p>Matteo Fasiolo, University of Bristol,</p>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-6">
+						<div class="work-content">
+							<img src="img/who-crop.gif" alt="nikt">
+							<h4><a href="http://whyr.pl/2019/submit/">Submit your workshop</a></h4>
+						</div>
+					</div>
+					<div class="col-6">
+						<div class="work-content">
+							<img src="img/who-crop.gif" alt="nikt">
+							<h4><a href="http://whyr.pl/2019/register/">Register now</a></h4>
+						</div>
+					</div>
+				</div>
     </div>
-  </section>-->
+  </section>
               <!-- <section class="citation">
     <div class="wrapper">
       <header>
