added link to the english content

--- a/register/index.html
+++ b/register/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; URL='https://whyr2019.evenea.pl'" />
+<meta http-equiv="refresh" content="0; URL='https://whyr2019.evenea.pl/?lang=en'" />
