Add Paula to website

--- a/index.html
+++ b/index.html
@@ -276,6 +276,18 @@
           </div>
         </div>
       </div>
+      <div class="row">
+        <div class="col-6 speaker">
+          <img src="img/guests/paula_crop.gif">
+          <div class="who">
+            <h5 style="color:#FFFFFF">Paula Brito</h5>
+            <p class="job" style="color:#FFFFFF">
+              <a href="https://www.researchgate.net/profile/Paula_Brito2" target="_blank"><i class="fa fa-globe" aria-hidden="true"></i></a>
+               Faculty of Economics, University of Porto</p>
+            
+          </div>
+        </div>
+      </div>
     </div>
   </section>
   <!-- Licznik -->
@@ -736,11 +748,6 @@
                                 <img src="img/logos/wser6.jpg" alt="WSER" style="width:50%"> </a>
                             </p>
                           </div>
-                         <div class="col-4"> <p>
-                              <a href="http://biznesmysli.pl/">
-                                <img src="img/logos/biznes.jpg" alt="BIZNES MYŚLI" style="width:50%"> </a>
-                            </p>
-                        </div>
                         <div class="row">
                           <div class="col-4 col-md-2">
                             <p>
