add Klaudia to Organziers and assign roles

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Why R? 2019: an international conference about R applications, ranging from pure science to business">
   <meta name="keywords" content="Conference Why R, machine learning, mathematics, R, coding, data analysis, data science, R users groups">
-  <meta name="author" content="Michał Burdukiewicz" >
+  <meta name="author" content="Michał Burdukiewicz and Marcin Kosinski" >
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat|Roboto" rel="stylesheet">
   <link rel="stylesheet" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
@@ -65,7 +65,7 @@
               <a href="#sponsoring" class="link">Sponsors</a>
             </li>
             <li>
-              <a href="#organizators" class="link">Organising committee</a>
+              <a href="#organizators" class="link">Organizers</a>
             </li>
             <li>
               <a href="http://whyr.pl/2019/coc/" class="link">Code of conduct</a>
@@ -650,7 +650,7 @@
                     <header>
                       <header>
                         <h4>Organising</h4>
-                        <h3>Organising Committee</h3>
+                        <h3>Organizers</h3>
                       </header>
                       <div class="galeria">
                         <div class="photo_container">
@@ -658,7 +658,7 @@
                             <img src="img/people/marcin-crop.gif" alt="Marcin Kosiński"> </figure>
                           <div class="description">
                             <p>Marcin Kosiński</p>
-                            <p id="lider"></p>
+                            <p id="lider">Project Leader</p>
                             <a href="https://www.linkedin.com/in/marcin-kosiński-81435aab" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
                             <a href="http://r-addict.com/" target="_blank"><i class="fa fa-globe" aria-hidden="true"></i></a>
                             <a href="https://github.com/MarcinKosinski/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
@@ -669,8 +669,18 @@
                             <img src="img/people/Michal_kolko3.gif" alt="Michał Burdukiewicz"> </figure>
                           <div class="description">
                             <p>Michał Burdukiewicz</p>
+                            <p id="lider">Scientific Programme Officer</p>
                             <a href="https://www.researchgate.net/profile/Michal_Burdukiewicz" target="_blank"><i class="fa fa-globe" aria-hidden="true"></i></a>
                             <a href="https://github.com/michbur" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                          </div>
+                        </div>
+                        <div class="photo_container">
+                          <figure class="photo">
+                            <img src="img/people/klaudia-crop.gif" alt="Klaudia Korniluk"> </figure>
+                          <div class="description">
+                            <p>Klaudia Korniluk</p>
+                            <p id="lider">Design Manager</p>
+                            <a href="https://www.facebook.com/pedzlenie" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
                           </div>
                         </div>
                       </div>
