add confirmed workshops

--- a/index.html
+++ b/index.html
@@ -540,8 +540,8 @@
     <div class="wrapper">
       <header>
         <h4>Workshops</h4>
-        <h3>More to come!</h3>
-        <p>We will announance selected workshops on 6th June 2019.</p>
+        <h3>2 more to come!</h3>
+        <p>We will announance the rest of workshops soon!</p>
         
       </header>
       <div class="row works-head">
@@ -552,15 +552,36 @@
 					<div class="col-6">
 						<div class="work-content">
 							<img src="img/workshops/idash-crop.gif" alt="iDash">
-							<h4>Straightforward introduction to Deep Learning in R (with Keras)</h4>
-							<p> Mikołaj Bogucki <a href="https://idash.pl/">iDash </a></p>
+							<h4>Straightforward introduction to</h4>
+							<h4>Deep Learning in R (with Keras)</h4>
+							<p>Mikołaj Bogucki, Mikołaj Olszewski</p>
+							<p><a href="https://idash.pl/">iDash </a></p>
 						</div>
 					</div>
 					<div class="col-6">
 						<div class="work-content">
 							<img src="img/workshops/matteo-crop.gif" alt="matteo">
-							<h4>Introduction to modern Generalized Additive Models in R (with mgcv)</h4>
-							<p>Matteo Fasiolo, University of Bristol,</p>
+							<h4>Introduction to modern </h4>
+							<h4>Generalized Additive Models in R (with mgcv)</h4>
+							<p>Matteo Fasiolo</p>
+							<p><a href="http://www.bristol.ac.uk/maths/people/matteo-fasiolo/overview.html">University of Bristol</a></p>
+						</div>
+					</div>
+				</div>
+					<div class="col-6">
+						<div class="work-content">
+							<img src="img/logos/mi2datalab.jpg" alt="MI2 Data Lab">
+							<h4>auditor + DALEX: a powerful duet for validation and explanation of machine learning models</h4>
+							<p>Alicja Gosiewska, Tomasz Mikołajczyk</p>
+							<p><a href="https://mi2-warsaw.github.io/">MI2 Data Lab</a></p>
+						</div>
+					</div>
+					<div class="col-6">
+						<div class="work-content">
+							<img src="img/sponsors/jumping_rivers_circle.jpg" alt="Jumping Rivers">
+							<h4>Shiny Basics</h4>
+							<p>Theo	Roe</p>
+							<p><a href="https://www.jumpingrivers.com/">Jumping Rivers</a></p>
 						</div>
 					</div>
 				</div>
@@ -568,15 +589,27 @@
 					<div class="col-6">
 						<div class="work-content">
 							<img src="img/who-crop.gif" alt="nikt">
-							<h4><a href="http://whyr.pl/2019/submit/">Submit your talk</a></h4>
+							<h4>Black is the new White - using eXplainable Artificial Intelligence in Business</h4>
+							<p>Marcin Chlebus</p>
+							<p><a href="https://www.wne.uw.edu.pl/">WNE UW</a>, Data Juice Lab, Data Dontus</p>
 						</div>
 					</div>
 					<div class="col-6">
 						<div class="work-content">
-							<img src="img/who-crop.gif" alt="nikt">
-							<h4><a href="http://whyr.pl/2019/register/">Register now</a></h4>
+							<img src="img/guests/Piotr_crop.gif" alt="Piotr Wojcik">
+							<h4>Speeding up R wih C++ (Rcpp)</h4>
+							<h4>- from basics to more advanced applications</h4>
+							<p>Piotr Wójcik, <a href="https://www.wne.uw.edu.pl/">Faculty of Economic Sciences, University of Warsaw</a></p>							
 						</div>
 					</div>
+				</div>
+				<div class="row">
+					<div class="col-12">
+						<div class="work-content">
+							<h3><a href="http://whyr.pl/2019/register/">REGISTER HERE</a></h4>
+						</div>
+					</div>
+					
 				</div>
     </div>
   </section>
