add url to github where descriptions are stored

--- a/index.html
+++ b/index.html
@@ -542,6 +542,7 @@
         <h4>Workshops</h4>
         <h3>2 more to come!</h3>
         <p>We will announance the rest of workshops soon!</p>
+        <p>The description of each workshop can be found <a href="https://github.com/WhyR2019/workshops">here</a>.</p>
         
       </header>
       <div class="row works-head">
