--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
           </div>
         </div>
         <div class="col-6 speaker">
-          <img src="img/guests/wjakuczun.gif">
+          <img src="img/guests/wit2019_crop.gif">
           <div class="who">
             <h5 style="color:#FFFFFF">Wit Jakuczun</h5>
             <p class="job" style="color:#FFFFFF">
@@ -540,14 +540,26 @@
     <div class="wrapper">
       <header>
         <h4>Workshops</h4>
-        <h3>2 more to come!</h3>
-        <p>We will announance the rest of workshops soon!</p>
-        <p>The description of each workshop can be found <a href="https://github.com/WhyR2019/workshops">here</a>.</p>
+        <h3>Hosted in 2 sessions</h3>
+        <p>Each workshop takes around 3 hours and happens in the morning or afternoon session.</p>
+        <p>The description of proposed workshops can be found <a href="https://github.com/WhyR2019/workshops">here</a>.</p>
         
       </header>
       <div class="row works-head">
-					<div class="col-6"><h3></h3></div>
-					<div class="col-6"><h3></h3></div>
+					<div class="col-6"><h3>Morning (9:00-12:30)</h3></div>
+					<div class="col-6"><h3>Afternoon (13:30-17:00)</h3></div>
+				</div>
+				<div class="row">
+				  <div class="col-12">
+						<div class="work-content">
+							<img src="img/workshops/matteo-crop.gif" alt="matteo">
+							<h4>ALL DAY INVITED WORKSHOP</h4>
+							<h4>Introduction to modern </h4>
+							<h4>Generalized Additive Models in R (with mgcv)</h4>
+							<p>Matteo Fasiolo</p>
+							<p><a href="http://www.bristol.ac.uk/maths/people/matteo-fasiolo/overview.html">University of Bristol</a></p>
+						</div>
+					</div>
 				</div>
 				<div class="row">
 					<div class="col-6">
@@ -561,11 +573,11 @@
 					</div>
 					<div class="col-6">
 						<div class="work-content">
-							<img src="img/workshops/matteo-crop.gif" alt="matteo">
-							<h4>Introduction to modern </h4>
-							<h4>Generalized Additive Models in R (with mgcv)</h4>
-							<p>Matteo Fasiolo</p>
-							<p><a href="http://www.bristol.ac.uk/maths/people/matteo-fasiolo/overview.html">University of Bristol</a></p>
+							<img src="img/who-crop.gif" alt="Jan Gorecki">
+							<h4>data.table</h4>
+							<h4>introduction & time-series</h4>
+							<p>Jan Gorecki</p>
+							<p><a href="https://www.h2o.ai/">H2O.AI</a></p>
 						</div>
 					</div>
 				</div>
@@ -579,20 +591,20 @@
 					</div>
 					<div class="col-6">
 						<div class="work-content">
-							<img src="img/sponsors/jumping_rivers_circle.jpg" alt="Jumping Rivers">
-							<h4>Shiny Basics</h4>
-							<p>Theo	Roe</p>
-							<p><a href="https://www.jumpingrivers.com/">Jumping Rivers</a></p>
+							<img src="img/guests/mch_crop.gif" alt="nikt">
+							<h4>Black is the new White - using eXplainable Artificial Intelligence in Business</h4>
+							<p>Marcin Chlebus</p>
+							<p><a href="https://www.wne.uw.edu.pl/">WNE UW</a>, Data Juice Lab, Data Dontus</p>
 						</div>
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-6">
+          <div class="col-6">
 						<div class="work-content">
-							<img src="img/who-crop.gif" alt="nikt">
-							<h4>Black is the new White - using eXplainable Artificial Intelligence in Business</h4>
-							<p>Marcin Chlebus</p>
-							<p><a href="https://www.wne.uw.edu.pl/">WNE UW</a>, Data Juice Lab, Data Dontus</p>
+							<img src="img/sponsors/jumping_rivers_circle.jpg" alt="Jumping Rivers">
+							<h4>Shiny Basics</h4>
+							<p>Theo	Roe</p>
+							<p><a href="https://www.jumpingrivers.com/">Jumping Rivers</a></p>
 						</div>
 					</div>
 					<div class="col-6">
@@ -604,13 +616,27 @@
 						</div>
 					</div>
 				</div>
+					<div class="row">
+          <div class="col-6">
+						<div class="work-content">
+							<img src="img/who-crop.gif" alt="To be announced">
+							<h4>To be announced</h4>
+						</div>
+					</div>
+					<div class="col-6">
+						<div class="work-content">
+							<img src="img/guests/radmila_crop.gif" alt="Radmila Velichkovich">
+							<h4>Potentials of R for data linkage</h4>
+							<p>Radmila Velichkovich, <a href="https://www.unine.ch/">University of Neuchatel</a></p>							
+						</div>
+					</div>
+				</div>
 				<div class="row">
 					<div class="col-12">
 						<div class="work-content">
 							<h3><a href="http://whyr.pl/2019/register/">REGISTER HERE</a></h4>
 						</div>
 					</div>
-					
 				</div>
     </div>
   </section>
