change keras with data.table

--- a/index.html
+++ b/index.html
@@ -562,6 +562,15 @@
 					</div>
 				</div>
 				<div class="row">
+          <div class="col-6">
+						<div class="work-content">
+							<img src="img/guests/rdatatable.png" alt="Jan Gorecki">
+							<h4>data.table</h4>
+							<h4>introduction & time-series</h4>
+							<p>Jan Gorecki</p>
+							<p><a href="https://www.h2o.ai/">H2O.AI</a></p>
+						</div>
+					</div>
 					<div class="col-6">
 						<div class="work-content">
 							<img src="img/workshops/idash-crop.gif" alt="iDash">
@@ -569,15 +578,6 @@
 							<h4>Deep Learning in R (with Keras)</h4>
 							<p>Mikołaj Bogucki, Mikołaj Olszewski</p>
 							<p><a href="https://idash.pl/">iDash </a></p>
-						</div>
-					</div>
-					<div class="col-6">
-						<div class="work-content">
-							<img src="img/who-crop.gif" alt="Jan Gorecki">
-							<h4>data.table</h4>
-							<h4>introduction & time-series</h4>
-							<p>Jan Gorecki</p>
-							<p><a href="https://www.h2o.ai/">H2O.AI</a></p>
 						</div>
 					</div>
 				</div>
